force-app/main/default/objects/Community_Event_Tag__c/Community_Event_Tag__c.object-meta.xml
<CustomObject>
    <description>This object allows Tags and a Group to be associated to an Event record.</description>
    <label>Community Event Tag</label>
    <nameField>
        <displayFormat>CET-{yy}{mm}{0}</displayFormat>
        <label>Community Event Tag</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Community Event Tag</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>