force-app/main/default/objects/Community_Event_Tag__c/fields/Community_Event__c.field-meta.xml
<CustomField>
    <fullName>Community_Event__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Allows tags to be associated with this Event record.</description>
    <label>Community Event</label>
    <referenceTo>Community_Events__c</referenceTo>
    <relationshipLabel>Group &amp; Tags</relationshipLabel>
    <relationshipName>Events_Tag_Joins</relationshipName>
    <type>Lookup</type>
</CustomField>