force-app/main/default/objects/Community_Event_Tag__c/fields/Community_Group_Control__c.field-meta.xml
<CustomField>
    <fullName>Community_Group_Control__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Allows a Community Group to be associated with a Community Event.  Not mandatory.  Only used when joining a Community Event to a Chatter Group.</description>
    <label>Community Group Control</label>
    <referenceTo>Community_Group_Control__c</referenceTo>
    <relationshipLabel>Group Events</relationshipLabel>
    <relationshipName>Community_Event_Tag</relationshipName>
    <type>Lookup</type>
</CustomField>