force-app/main/default/objects/Community_Event_Tag__c/fields/Community_Tag__c.field-meta.xml
<CustomField>
    <fullName>Community_Tag__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Allows tags to be associated with this Event record.</description>
    <label>Community Tag</label>
    <referenceTo>Community_Tag__c</referenceTo>
    <relationshipLabel>Event Items Tagged</relationshipLabel>
    <relationshipName>Community_EventItems_Tagged</relationshipName>
    <type>Lookup</type>
</CustomField>