force-app/main/default/objects/Community_Event_Tag__c/fields/Event_Name__c.field-meta.xml
<CustomField>
    <fullName>Event_Name__c</fullName>
    <description>Represents the Name of the related Event.</description>
    <formula>Community_Event__r.Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Represents the Name of the related Event.</inlineHelpText>
    <label>Event Name</label>
    <type>Text</type>
</CustomField>