force-app/main/default/objects/Community_Event_Tag__c/fields/Event_Public__c.field-meta.xml
<CustomField>
    <fullName>Event_Public__c</fullName>
    <description>Indicates if the related Event is flagged as Public.</description>
    <formula>Community_Event__r.Public__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Indicates if the related Event is flagged as Public.</inlineHelpText>
    <label>Event Public</label>
    <type>Checkbox</type>
</CustomField>