force-app/main/default/objects/Community_Event_Tag__c/fields/Event_Teaser__c.field-meta.xml
<CustomField>
    <fullName>Event_Teaser__c</fullName>
    <description>Represents the Teaser of the related Event.</description>
    <formula>Community_Event__r.Teaser__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Represents the Teaser of the related Event.</inlineHelpText>
    <label>Event Teaser</label>
    <type>Text</type>
</CustomField>