force-app/main/default/objects/Community_Event_Tag__c/fields/Event_Time__c.field-meta.xml
<CustomField>
    <fullName>Event_Time__c</fullName>
    <description>Represents the Start and End time of the related Event.</description>
    <formula>TEXT(MONTH(DATEVALUE(Community_Event__r.Start__c)))
&amp;&quot;/&quot;&amp;
TEXT(DAY(DATEVALUE(Community_Event__r.Start__c)))
&amp;&quot;/&quot;&amp;
TEXT(YEAR(DATEVALUE(Community_Event__r.Start__c)))

&amp; &quot; to &quot; &amp; 

TEXT(MONTH(DATEVALUE(Community_Event__r.End__c)))
&amp;&quot;/&quot;&amp;
TEXT(DAY(DATEVALUE(Community_Event__r.End__c)))
&amp;&quot;/&quot;&amp;
TEXT(YEAR(DATEVALUE(Community_Event__r.End__c)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Represents the Start and End time of the related Event.</inlineHelpText>
    <label>Event Time</label>
    <type>Text</type>
</CustomField>