force-app/main/default/objects/Community_Event_Tag__c/fields/Group_Discoverable__c.field-meta.xml
<CustomField>
    <fullName>Group_Discoverable__c</fullName>
    <description>Indicates if the Group related to the Community Event is Discoverable by everyone in the Community.</description>
    <formula>Community_Group_Control__r.Discoverable__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Indicates if the Group related to the Community Event is Discoverable by everyone in the Community.</inlineHelpText>
    <label>Group Discoverable</label>
    <type>Checkbox</type>
</CustomField>