force-app/main/default/objects/Community_Event_Tag__c/fields/Group_Purpose__c.field-meta.xml
<CustomField>
    <fullName>Group_Purpose__c</fullName>
    <description>Represents the Purpose of the related Group.</description>
    <formula>TEXT( Community_Group_Control__r.Purpose__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Represents the Purpose of the related Group.</inlineHelpText>
    <label>Group Purpose</label>
    <type>Text</type>
</CustomField>