force-app/main/default/objects/Community_Event_Tag__c/fields/Group_Type__c.field-meta.xml
<CustomField>
    <fullName>Group_Type__c</fullName>
    <description>Represents the Type of Group that is related to the Community Event record.</description>
    <formula>TEXT( Community_Group_Control__r.Type__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Represents the Type of Group that is related to the Community Event record.</inlineHelpText>
    <label>Group Type</label>
    <type>Text</type>
</CustomField>