force-app/main/default/objects/Community_Event_Tag__c/fields/Theme__c.field-meta.xml
<CustomField>
    <fullName>Theme__c</fullName>
    <description>Represents the Theme the related Tag is associated with.</description>
    <formula>HYPERLINK(&quot;/&quot;&amp; Community_Tag__r.Community_Theme__r.Id, Community_Tag__r.Theme_Name__c ,&quot;_self&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Represents the Theme the related Tag is associated with.</inlineHelpText>
    <label>Theme</label>
    <type>Text</type>
</CustomField>