force-app/main/default/objects/Community_Event_Tag__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Event_Name__c</columns>
    <columns>Community_Event__c</columns>
    <columns>Community_Group_Control__c</columns>
    <columns>Community_Tag__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>